--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,26 +1,10 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Tailwind
 @tailwind base;
 @tailwind components;
 @tailwind utilites;
 
 // Variables
 @import 'variables';
-
-// Locals
-@import 'home';
-@import "mission";
-@import 'request';
-
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
-body {
-    background-color: #DFFFFF;
-    height: 100%;
-}
