--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,24 @@
 
 // Variables
 @import 'variables';
+
+// Vue Material
+@import "~vue-material/dist/theme/engine"; // Import the theme engine
+
+@include md-register-theme("default", (
+    primary: #1c2f90, // The primary color of your application
+    accent: md-get-palette-color(red, A200), // The accent or secondary color
+    theme: dark // This can be dark or light
+));
+
+@import "~vue-material/dist/theme/all"; // Apply the theme
+
+// Page CSS
+.home {
+    .home-card {
+        position: fixed;
+        bottom: 20%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
