upload to server

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,7 +15,7 @@
 @include md-register-theme("default", (
     primary: #1c2f90, // The primary color of your application
     accent: md-get-palette-color(red, A200), // The accent or secondary color
-    theme: dark // This can be dark or light
+    theme: light // This can be dark or light
 ));
 
 @import "~vue-material/dist/theme/all"; // Apply the theme
